--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* ======================================== */
 /* COLOURS */
 /* ======================================== */
@@ -128,14 +127,15 @@ a, input, button {
 /* ================================== */
 .header-wrapper {
   border: 1px solid palevioletred;
-  /*     display: flex;
-      align-items: center; */
 }
 .header-wrapper .header {
   background-color: lightcoral;
   height: 50px;
   display: flex;
   flex-flow: row wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media screen and (max-width: 1200px) {
   .header-wrapper .header {
@@ -149,7 +149,8 @@ a, input, button {
 }
 @media screen and (min-width: 1200px) {
   .header-wrapper .header {
-     justify-content: unset;
+    width: 80%;
+    justify-content: space-between;
     transition: all 1s ease-in-out;
     -webkit-transition: all 1s ease-in-out;
     -ms-transition: all 1s ease-in-out;
@@ -182,6 +183,7 @@ a, input, button {
 }
 .header-wrapper .header__nav {
   background-color: lightskyblue;
+  height: 100%;
   display: flex;
   align-items: center;
 }
@@ -215,7 +217,26 @@ a, input, button {
 .header-wrapper .header__nav a {
   border: 1px solid black;
   height: 20px;
-  margin: 0 1%;
+}
+@media screen and (max-width: 1200px) {
+  .header-wrapper .header__nav a {
+    margin: 0 1%;
+    transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-wrapper .header__nav a {
+    margin: 1%;
+    transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+  }
 }
 
 .homepage-content .homepage-title {
