HOMEPAGE + PHOTOGRAPHER PAGE - modifications of html photographer infos block + adding scss layout for it

--- a/app/src/scss/style.scss
+++ b/app/src/scss/style.scss
@@ -8,6 +8,8 @@
 @import "../sass/components/main-btn";
 
 @import "../sass/layouts/header";
+@import "../sass/layouts/photographer-infos";
+
 @import "../sass/layouts/modal";
 
 @import "../sass/pages/homepage";
