--- a/app/src/sass/base/_main-rules.scss
+++ b/app/src/sass/base/_main-rules.scss
@@ -12,6 +12,7 @@
 html {
     font-size: 100%; /* = 16px default */
     text-rendering: optimizeLegibility;
+    font-family: 'DMSans-regular', Arial, Helvetica, sans-serif;
 }
 
 body { 
