--- a/app/src/sass/base/_main-rules.scss
+++ b/app/src/sass/base/_main-rules.scss
@@ -27,6 +27,7 @@ ul li { list-style: none; }
 button {  display: block; border: none; }
 
 a, input, button {cursor: pointer; }
+h1,h2, h3,h4, h5, h6 { font-weight: normal;}
 
 
 
