--- a/app/src/sass/components/_nav-tags.scss
+++ b/app/src/sass/components/_nav-tags.scss
@@ -3,18 +3,23 @@
 /* =============================================== */
 
 .tags-list { 
+    background-color: lightgreen;
     display: flex;
     align-items: center;
+    flex:auto; // takes whatever x space is left
+    
     @include max-1200px{ width:100%; @include flex(row, wrap);justify-content: center; margin-top:25px; } 
-    @include min-1200px{ width:700px; @include flex(row, nowrap);justify-content: center; } 
+    @include min-1200px{ @include flex(row, nowrap);justify-content: center; } 
     .nav-tag { 
-        height:20px; 
+        background-color: green;
+        height:1.25em; 
         color: $red-main;
         font-weight: 500;
         border: 1px solid $greySpecial;
         @include border-radius(5px);
         @include max-1200px {margin: 0 1%;}
         @include min-1200px {margin: 1%;}
+
     }
     &--home { 
         .nav-tag {
